SET(LIBGUMBO_VERSION 1.0)
SET(LIBGUMBO_SOVERSION 0.1)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# ARNETNW start
AUX_SOURCE_DIRECTORY(. LIBGUMBO_SRC)
ADD_LIBRARY(gumbo SHARED ${LIBGUMBO_SRC})
SET_TARGET_PROPERTIES(gumbo PROPERTIES VERSION ${LIBGUMBO_VERSION} SOVERSION ${LIBGUMBO_SOVERSION})
#TARGET_LINK_LIBRARIES(gumbo m)

ADD_LIBRARY(gumbo_s STATIC ${LIBGUMBO_SRC})
SET_TARGET_PROPERTIES(gumbo_s PROPERTIES OUTPUT_NAME "gumbo")
#TARGET_LINK_LIBRARIES(gumbo_s m)

INSTALL (TARGETS gumbo gumbo_s
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/gumbo.h DESTINATION include/)



# ARNETNW end




