SET(LIBCJSON_VERSION 1.0)
SET(LIBCJSON_SOVERSION 0.1)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# ARNETNW start
SET(LIBCJSON_SRC cjson.c)
ADD_LIBRARY(cjson SHARED ${LIBCJSON_SRC})
SET_TARGET_PROPERTIES(cjson PROPERTIES VERSION ${LIBCJSON_VERSION} SOVERSION ${LIBCJSON_SOVERSION})
TARGET_LINK_LIBRARIES(cjson m)

ADD_LIBRARY(cjson_s STATIC ${LIBCJSON_SRC})
SET_TARGET_PROPERTIES(cjson_s PROPERTIES OUTPUT_NAME "cjson")
TARGET_LINK_LIBRARIES(cjson_s m)

INSTALL (TARGETS cjson cjson_s
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/cjson.h DESTINATION include/)



# ARNETNW end




